-Added 'remove' link to all Environment configuration Items -Fixed spacing issue of Configuration Items in IE6 -Fixed show page blow up

--- a/web-app/css/main.css
+++ b/web-app/css/main.css
@@ -274,6 +274,14 @@ margin-right: 0.5em;
 display: block
 }
 
+.ciLink{
+width: 9em;
+float: left;
+text-align: left;
+margin-left: 0.5em;
+display: block
+}
+
 /* TOP NAVIGATION */
 
 #top_nav_wrapper {
